jpa improvements and integration test fixes